--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "description": "",
+    "description": "Backend For TalkToBeavs",
     "main": "index.js",
     "private": true,
     "scripts": {
@@ -10,14 +10,13 @@
         "format": "prettier --write {src}/**/*.{js,jsx,ts,tsx,json,css,scss,md}"
     },
     "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "author": "Nyumat",
+    "license": "MIT",
     "dependencies": {
         "axios": "^1.3.4",
         "bcrypt": "^5.1.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "csurf": "^1.11.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-rate-limit": "^6.7.0",
@@ -27,8 +26,11 @@
         "mongoose": "^7.0.0",
         "nodemon": "^2.0.20",
         "prettier": "^2.8.4",
-        "react-router-dom": "^6.9.0",
         "socket.io": "^4.6.1"
     },
-    "type": "module"
+    "type": "module",
+    "engines": {
+        "node": "v20.1.0",
+        "npm": "9.6.4"
+    }
 }
